--- a/Minecraft Server Manager/App.config
+++ b/Minecraft Server Manager/App.config
@@ -4,6 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <appSettings>
-      <add key="startServer" value="" />      
+      <add key="startServer" value="" />
+      <add key="automaticBackups" value="" />
+      <add key="dateTime" value="" />
     </appSettings>
 </configuration>
