Added a new backup system. The server no longer needs to be stopped for a backup. The default interval for backups is every 30 minutes and can be changed in the Minecraft Server Manager.exe.Config

--- a/Minecraft Server Manager/App.config
+++ b/Minecraft Server Manager/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <appSettings>
-      <add key="startServer" value="" />
-      <add key="automaticBackups" value="" />
-      <add key="dateTime" value="" />
+      <add key="startServer" value="true" />
+      <add key="automaticBackups" value="true" />
+      <add key="backupInterval" value="30" />
     </appSettings>
 </configuration>
