--- a/Minecraft Server Manager/App.config
+++ b/Minecraft Server Manager/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <appSettings>
-      <add key="startServer" value="true" />
-      <add key="automaticBackups" value="true" />
-      <add key="backupInterval" value="30" />
+      <add key="startServer" value="true"/>
+      <add key="automaticBackups" value="true"/>
+      <add key="backupInterval" value="30"/>
     </appSettings>
 </configuration>
